--- a/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
@@ -1,9 +1,9 @@
 baseBackups.compression=lz4
 baseBackups.cronSchedule=0 5 * * *
 baseBackups.retention=5
-baseBackups.performance.maxNetworkBandwitdh=1
-baseBackups.performance.maxDiskBandwitdh=1
-baseBackups.performance.uploadDiskConcurrency=1
+baseBackups.performance.maxNetworkBandwitdh=
+baseBackups.performance.maxDiskBandwitdh=
+baseBackups.performance.uploadDiskConcurrency=
 storage.type=s3Compatible
 storage.s3Compatible.awsCredentials.secretKeySelectors.accessKeyId.key=accesskey
 storage.s3Compatible.awsCredentials.secretKeySelectors.accessKeyId.name=minio
