e2e: fixed custom labels and annotations tests values

--- a/stackgres-k8s/e2e/spec/custom-annotations.values.yaml
+++ b/stackgres-k8s/e2e/spec/custom-annotations.values.yaml
@@ -11,7 +11,7 @@ cluster:
       size: 128Mi
   configurations:
     sgBackupConfig: null
-  sgInstanceProfiles: 'size-xs'
+  sgInstanceProfile: 'size-xs'
   prometheusAutobind: false
 nonProductionOptions:
   disableClusterPodAntiAffinity: true
