e2e: using cluster helm chart to call the cluster restart script

--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -1,5 +1,9 @@
 cluster:
   create: true
+  # restart: true
+  # restartRole: 
+  restartClusterRole: cluster-admin
+  restartReducedImpact: true
   postgresVersion: '12.3'
   instances: 1
   sgInstanceProfile: size-xs
