--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-restart-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-restart-job.yaml
@@ -77,5 +77,5 @@ spec:
             EOF
             export REDUCED_IMPACT={{ if .Values.cluster.restartReducedImpact }}true{{ else }}false{{ end }}
             sh -x /tmp/cluster-restart.sh '{{ .Release.Namespace }}' '{{ .Release.Name }}'
-      restartPolicy: OnFailure
+      restartPolicy: Never
 {{- end }}
