fix: Only postgres database stats are collected by postgres-exporter

--- a/stackgres-k8s/src/operator/src/main/resources/prometheus-postgres-exporter/queries.yaml
+++ b/stackgres-k8s/src/operator/src/main/resources/prometheus-postgres-exporter/queries.yaml
@@ -519,7 +519,7 @@
           || '          AND table_name = psut.relname' || E'\n'
           || '        LEFT OUTER JOIN pg_catalog.pg_stats' || E'\n'
           || '        ON table_schema = pg_stats.schemaname' || E'\n'
-          || '            AND table_name = pg_stats.table_name' || E'\n'
+          || '            AND table_name = pg_stats.tablename' || E'\n'
           || '            AND column_name = attname' || E'\n'
           || '    WHERE attname IS NULL' || E'\n'
           || '        AND table_schema NOT IN (''pg_catalog'', ''information_schema'')' || E'\n'
@@ -538,13 +538,13 @@
           || '    FROM pg_catalog.pg_stats CROSS JOIN constants' || E'\n'
           || '        LEFT OUTER JOIN no_stats' || E'\n'
           || '            ON schemaname = no_stats.table_schema' || E'\n'
-          || '            AND tablename = no_stats.tablename' || E'\n'
+          || '            AND tablename = no_stats.table_name' || E'\n'
           || '    WHERE schemaname NOT IN (''pg_catalog'', ''information_schema'')' || E'\n'
-          || '        AND no_stats.tablename IS NULL' || E'\n'
+          || '        AND no_stats.table_name IS NULL' || E'\n'
           || '        AND EXISTS ( SELECT 1' || E'\n'
           || '            FROM information_schema.columns' || E'\n'
           || '                WHERE schemaname = columns.table_schema' || E'\n'
-          || '                    AND tablename = columns.tablename )' || E'\n'
+          || '                    AND tablename = columns.table_name )' || E'\n'
           || '    GROUP BY schemaname, tablename, hdr, ma, bs),' || E'\n'
           || 'data_headers AS (' || E'\n'
           || '    -- estimate header and row size' || E'\n'
@@ -602,7 +602,7 @@
           || '                ELSE 0::NUMERIC END AS bloat_bytes' || E'\n'
           || '    FROM estimates_with_toast' || E'\n'
           || '    UNION ALL' || E'\n'
-          || '    SELECT table_schema, tablename, FALSE,' || E'\n'
+          || '    SELECT table_schema, table_name, FALSE,' || E'\n'
           || '        est_rows, table_size,' || E'\n'
           || '        NULL::NUMERIC, NULL::NUMERIC' || E'\n'
           || '    FROM no_stats),' || E'\n'
