--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-restart-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-restart-job.yaml
@@ -4,6 +4,9 @@ kind: ServiceAccount
 metadata:
   name: {{ .Release.Name }}-cluster-restart
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": post-upgrade
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 ---
 {{- if .Values.cluster.restartRole }}
 apiVersion: rbac.authorization.k8s.io/v1
