--- a/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
@@ -5,19 +5,22 @@ metadata:
   name: "{{ .Release.Name }}-create-certificate"
   namespace: {{ .Release.Namespace }}
   labels:
-    app: stackgres-create-certificate
+    app: stackgres-operator
     scope: init
+    job: create-certificate
   annotations:
     "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook-weigth": "0"
 spec:
   template:
     metadata:
       labels:
-        app: stackgres-create-certificate
+        app: stackgres-operator
         scope: init
+        job: create-certificate
     spec:
-      serviceAccountName: {{ .Release.Name }}
+      serviceAccountName: {{ .Release.Name }}-init
       containers:
       - name: "{{ .Release.Name }}-create-certificate"
         image: "bitnami/kubectl:1.18.3"
@@ -115,7 +118,5 @@ spec:
             kubectl rollout restart -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
             kubectl rollout restart -n '{{ .Release.Namespace }}' 'deployment/{{ .Values.restapi.name }}'
             {{- end }}
-            kubectl rollout status -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
-            kubectl rollout status -n '{{ .Release.Namespace }}' 'deployment/{{ .Values.restapi.name }}'
       restartPolicy: OnFailure
 {{ end }}
