fix: operator role has permissions only used to install/upgrade

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/init-service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/init-service-account.yaml
@@ -31,12 +31,12 @@ roleRef:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{ .Release.Name }}-post-bootstrap"
+  name: "{{ .Release.Name }}-bootstrap"
   namespace: {{ .Release.Namespace }}
   labels:
     app: stackgres-operator
     scope: init
-    job: post-bootstrap
+    job: bootstrap
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
@@ -47,7 +47,7 @@ spec:
       labels:
         app: stackgres-operator
         scope: init
-        job: post-bootstrap
+        job: bootstrap
     spec:
       serviceAccountName: {{ .Release.Name }}-init
       containers:
