--- a/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
+++ b/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
@@ -1,7 +1,7 @@
 static_resources:
   listeners:
     - name: postgres_listener
-      per_connection_buffer_limit_bytes: 32768  # 32 KiB
+      per_connection_buffer_limit_bytes: 1048576 # 1 MiB
       address:
         socket_address:
           address: 0.0.0.0
@@ -19,7 +19,7 @@ static_resources:
                 cluster: postgres_cluster
                 idle_timeout: 0s
     - name: postgres_raw_listener
-      per_connection_buffer_limit_bytes: 32768  # 32 KiB
+      per_connection_buffer_limit_bytes: 1048576 # 1 MiB
       address:
         socket_address:
           address: 0.0.0.0
@@ -36,7 +36,7 @@ static_resources:
     - name: postgres_cluster
       type: STATIC
       connect_timeout: 1s
-      per_connection_buffer_limit_bytes: 32768 # 32 KiB
+      per_connection_buffer_limit_bytes: 1048576 # 1 MiB
       load_assignment:
         cluster_name: postgres_raw_cluster
         endpoints:
