--- a/.gitlab-ci/check-release.yml
+++ b/.gitlab-ci/check-release.yml
@@ -1,5 +1,6 @@
 
 enforce release:
+  image: docker.io/ongres/ubi-graalvm-maven:20.1.0-java11
   stage: check-release
   tags:
     - stackgres-runner
