--- a/stackgres-k8s/src/api-web/pom.xml
+++ b/stackgres-k8s/src/api-web/pom.xml
@@ -66,6 +66,10 @@
       <artifactId>jakarta.persistence-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.swagger.core.v3</groupId>
+      <artifactId>swagger-annotations</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.stackgres</groupId>
       <artifactId>stackgres-test-util</artifactId>
       <version>${project.version}</version>
@@ -166,6 +170,29 @@
             <configuration>
               <skip>${quarkus.skipAugmentation}</skip>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>io.openapitools.swagger</groupId>
+        <artifactId>swagger-maven-plugin</artifactId>
+        <configuration>
+          <resourcePackages>
+            <resourcePackage>io.stackgres.apiweb.rest</resourcePackage>
+            <resourcePackage>io.stackgres.apiweb.dto</resourcePackage>
+            <resourcePackage>io.stackgres.apiweb.security</resourcePackage>
+          </resourcePackages>
+          <outputDirectory>${basedir}/target/</outputDirectory>
+          <outputFilename>swagger</outputFilename>
+          <outputFormats>JSON,YAML</outputFormats>
+          <prettyPrint>true</prettyPrint>
+          <useResourcePackagesChildren>true</useResourcePackagesChildren>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
