--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -34,6 +34,7 @@ cluster:
     sgPoolingConfig: pgbouncerconf
   distributedLogs:
     sgDistributedLogs: distributedlogs
+    retention: 7 days
   #restore:
   #  initialData:
   #    fromBackup:
