--- a/.gitlab-ci/image-build.yml
+++ b/.gitlab-ci/image-build.yml
@@ -53,6 +53,24 @@ build jobs jvm image:
       flock /tmp/stackgres-jobs-build-jvm-image \
         sh -xe jobs/src/main/buildah/build-image-jvm.sh
 
+build distributedlogs-controller jvm image:
+  image: quay.io/buildah/stable:v1.15.0
+  stage: image build
+  tags:
+    - stackgres-runner
+  dependencies:
+    - build
+  timeout: 1 hour
+  script:
+    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}-jvm"'
+    - 'export DISTRIBUTEDLOGS_CONTROLLER_IMAGE_NAME="stackgres/distributedlogs-controller:$IMAGE_TAG"'
+    - 'export TARGET_DISTRIBUTEDLOGS_CONTROLLER_IMAGE_NAME="$CI_REGISTRY/$CI_PROJECT_PATH/$DISTRIBUTEDLOGS_CONTROLLER_IMAGE_NAME"'
+    - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
+    - cd stackgres-k8s/src
+    - |
+      flock /tmp/stackgres-distributedlogs-controller-build-jvm-image \
+        sh -xe distributedlogs-controller/src/main/buildah/build-image-jvm.sh
+
 build operator native image:
   image: quay.io/buildah/stable:v1.15.0
   stage: image build
@@ -102,6 +120,7 @@ build restapi native image:
       - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
       - $DO_DEPLOY
       - $DO_NATIVE
+
 build jobs native image:
   image: quay.io/buildah/stable:v1.15.0
   stage: image build
@@ -119,6 +138,31 @@ build jobs native image:
     - |
       flock /tmp/stackgres-jobs-build-native-image \
         sh -xe jobs/src/main/buildah/build-image-native.sh
+  only:
+    variables:
+      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
+      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
+      - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
+      - $DO_DEPLOY
+      - $DO_NATIVE
+
+build distributedlogs-controller native image:
+  image: quay.io/buildah/stable:v1.15.0
+  stage: image build
+  tags:
+    - stackgres-runner
+  dependencies:
+    - build distributedlogs-controller native executable
+  timeout: 1 hour
+  script:
+    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
+    - 'export JOBS_IMAGE_NAME="stackgres/distributedlogs-controller:$IMAGE_TAG"'
+    - 'export TARGET_JOBS_IMAGE_NAME="$CI_REGISTRY/$CI_PROJECT_PATH/$JOBS_IMAGE_NAME"'
+    - buildah login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
+    - cd stackgres-k8s/src
+    - |
+      flock /tmp/stackgres-distributedlogs-controller-build-native-image \
+        sh -xe distributedlogs-controller/src/main/buildah/build-image-native.sh
   only:
     variables:
       - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
