--- a/stackgres-k8s/src/jobs/pom.xml
+++ b/stackgres-k8s/src/jobs/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jobs</artifactId>
+    <artifactId>stackgres-jobs</artifactId>
     <packaging>jar</packaging>
     <name>StackGres Jobs</name>
 
