--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -74,6 +74,7 @@
     <pmd.version>6.28.0</pmd.version>
     <docker-junit-extension.version>1.2.15</docker-junit-extension.version>
     <jersey.version>2.29</jersey.version>
+    <fluent-process.version>1.0.1</fluent-process.version>
     <log4j.version>2.13.3</log4j.version>
     <jooq.version>3.13.4</jooq.version>
     <jetbrains-annotations.version>20.0.0</jetbrains-annotations.version>
@@ -172,6 +173,11 @@
         <artifactId>asm</artifactId>
         <version>8.0.1</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.ongres</groupId>
+        <artifactId>fluent-process</artifactId>
+        <version>${fluent-process.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
