--- a/.gitlab-ci/deploy.yml
+++ b/.gitlab-ci/deploy.yml
@@ -37,6 +37,13 @@ deploy restapi jvm image:
     IMAGE_TAG_SUFFIX: "-jvm"
     IMAGE_NAME: "stackgres/restapi"
 
+deploy jobs jvm image:
+  extends: .deploy image
+  image: quay.io/buildah/stable:v1.15.0
+  variables:
+    IMAGE_TAG_SUFFIX: "-jvm"
+    IMAGE_NAME: "stackgres/jobs"
+
 deploy operator native image:
   extends: .deploy image
   image: quay.io/buildah/stable:v1.15.0
@@ -55,6 +62,18 @@ deploy restapi native image:
   variables:
     IMAGE_TAG_SUFFIX: ""
     IMAGE_NAME: "stackgres/restapi"
+  only:
+    variables:
+      - $SKIP_DEPLOY != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
+      - $SKIP_DEPLOY != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
+      - $DO_DEPLOY
+
+deploy job native image:
+  extends: .deploy image
+  image: quay.io/buildah/stable:v1.15.0
+  variables:
+    IMAGE_TAG_SUFFIX: ""
+    IMAGE_NAME: "stackgres/jobs"
   only:
     variables:
       - $SKIP_DEPLOY != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
